--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ h6 {
 }
 
 .header {
-  background-color: #b33d3a;
+  background-color: #063265;
   padding: 15px 0;
 }
 
@@ -515,7 +515,7 @@ h6 {
   position: absolute;
   width: 50px;
   height: 3px;
-  background-color: #f05f40;
+  background-color: #063265;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
@@ -566,7 +566,7 @@ h6 {
   -ms-flex-flow: column;
   flex-flow: column;
   height: 100%;
-  background-color: #f05f40;
+  background-color: #063265;
   overflow-y: auto;
   right: -100%;
   -webkit-transition: 0.8s;
